# es-benchmark

./: benchmark.py  docker-compose.yml  es_generate.py
es-pyo3/: Cargo.toml  es_pyo3_client.py  pyproject.toml
es-pyo3/src/: lib.rs
python-es/: es_client.py
