[package]
name = "es_pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "es_pyo3"
crate-type = ["cdylib"]

[dependencies]
elasticsearch = "8.5.0-alpha.1"
pyo3 = "0.19.0"
serde_json = "1.0.107"
tokio = "1.32.0"

